manifest/objects/DMMAX__Digest__c.object
<CustomObject>
    <fields>
        <fullName>DMMAX__Class__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Class</label>
        <referenceTo>DMMAX__Class__c</referenceTo>
        <relationshipLabel>Max Digests</relationshipLabel>
        <relationshipName>Digests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMMAX__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__HTML__c</fullName>
        <label>HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__LastRecord__c</fullName>
        <label>LastRecord</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__RecordCount__c</fullName>
        <label>RecordCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__RecordInsightCount__c</fullName>
        <label>RecordInsightCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Digests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Max Digest</label>
    <nameField>
        <label>Digest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Max Digests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>